swaggerの編集とサークル一覧の途中
