# internal/app/handler/handler.go
@@ -4,6 +4,10 @@ import (
 	"net/http"
 	"strconv"
 
+	"github.com/AirouTUS/shinkan-server/internal/usecase"
+
+	"github.com/AirouTUS/shinkan-server/internal/app/input"
+
 	"github.com/AirouTUS/shinkan-server/internal/model"
 
 	"github.com/AirouTUS/shinkan-server/internal/app/output"
@@ -53,4 +57,27 @@ func (h *Handler) GetCircle(c echo.Context) error {
 		return APIResponseError(c, http.StatusInternalServerError, "Internal Server Error", err)
 	}
 	return APIResponseOK(c, output.ToGetCircle(circle, circleTypes, Categories))
+}
+
+func (h *Handler) ListCircle(c echo.Context) error {
+	var param input.ListCircleInput
+	if err := c.Bind(&param); err != nil {
+		return APIResponseError(c, http.StatusBadRequest, "Bad Request", err)
+	}
+	if err := param.Validate(); err != nil {
+		return APIResponseError(c, http.StatusBadRequest, "Bad Request", err)
+	}
+
+	input := database.ListCircleInput{
+		CategoryID: param.CategoryID,
+	}
+
+	circles, err := h.dbRepository.ListCircle(input)
+	if err != nil {
+		return APIResponseError(c, http.StatusInternalServerError, "Internal Server Error", err)
+	}
+
+	categories := usecase.ParseCircleCategory(Categories, param.CategoryID)
+
+	return APIResponseOK(c, output.ToListCircle(circles, categories))
 }
